--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3",
-        "qiniu/php-sdk": "dev-master"
+        "qiniu/php-sdk": "^7.2"
     },
     "autoload": {
         "psr-4": {
